feat: use ErrorResponse as fail-case response body
